Ensure header is not covered by other elements

--- a/styles/header.css
+++ b/styles/header.css
@@ -2,6 +2,7 @@
   background-color: #fff;
   position: sticky;
   top: -30px;
+  z-index: 1000;
 }
 
 .header__row {
